[package]
name = "remolt-shell"
version = "0.3.2"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2021"
description = "Remolt Application Frameworks"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
remolt = { version = "0.3.1", path = "../molt" }
rustyline = "14.0.0"
