[package]
name = "molt"
version = "0.3.2"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2018"
description = "Embeddable TCL interpreter for Rust applications"
license = "BSD-3-Clause"
repository = "https://github.com/wduquette/molt"
homepage = "https://wduquette.github.io/"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
indexmap = {version = "1.3.0", default-features = false, optional = true}

[features]
default = ["dict", "float", "i64", "error-stack-trace", "internals", "std"]
dict = ["dep:indexmap"]
float = []
i64 = []
error-stack-trace = []
internals = []
std = []
