[package]
name = "remolt"
version = "0.3.2"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2021"
description = "Embeddable TCL interpreter for Rust applications"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
cfg-if = "1.0.0"
fnv = { version = "1.0.7", default-features = false }
indexmap = {version = "2.2.6", default-features = false}

[features]
default = [
    "dict", "float", "i64", "error-stack-trace", "internals", "std", "info",
    "expr", "closure-commands", "string-command",
]
dict = []
float = []
i64 = []
error-stack-trace = []
internals = []
info = []
expr = []
closure-commands = []
global-context = []
string-command = []
std = []
